fix chart width on mobile

--- a/_sass/snowpack_analysis.scss
+++ b/_sass/snowpack_analysis.scss
@@ -2,7 +2,8 @@
   margin: 0 auto;
   margin-top: 10px;
   padding-top: 10px;
-  max-width: 1000px;
+  min-width: 850px;
+  max-width: 850px;
 
   .description {
     font-size: 0.75rem;
